# CreativeSummerAcademy

./: .gitignore  create_admin.py  debug_points.py  debug_stats.py  env.example  fix_daily_stats.py  fix_stats_aggressive.py  pyproject.toml  raspberrypi_start_app.sh  raspberrypi_stop_app.sh  readme.md  requirements.txt  test_reset.py  test_timer_extension.py
app/: __init__.py  category_materials.json  config.py  database.py  main.py  reimbursement_items.json
app/models/: __init__.py  activity.py  config.py  daily_stats.py  parent.py  reimbursement.py  scoring.py  user.py
app/routers/: __init__.py  activities.py  admin.py  auth.py  dashboard.py  reimbursement.py  scoring.py
app/services/: __init__.py  activity_service.py  anthropic_service.py  config_service.py  reimbursement_service.py  scoring_service.py  session_service.py  template_service.py
logs/: app_2025-07-12.log.2025-07-12
static/css/: main.css
static/js/: timer.js
templates/: activity_prompt.ini  base.html  burger_menu.html
templates/auth/: login.html  setup.html
templates/child/: activity_active.html  activity_review.html  activity_setup.html  activity_view.html  daily_limit.html  dashboard.html  reimbursement.html  reimbursement_confirm.html  reimbursement_history.html
templates/parent/: activities.html  admin_users.html  dashboard.html  reports.html  scoring.html
templates/shared/: 404.html  500.html  rules_child.html  rules_parent.html
